--- a/contact.html
+++ b/contact.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="fr">
 <head>
-	<title>La Ferme du Doiterneau</title>
-	<meta charset="UTF-8">
+    <title>QUI SOMMES-NOUS ?</title>
+    <meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<link rel="stylesheet" href="styles.css">
@@ -26,25 +26,18 @@
 		</div>
 		<div class="burger-menu">
 			<ul class="links">
-				<li><a href="quisommesnous.html">QUI SOMMES NOUS?</a></li>
-				<li><a href="vente directe.html">VENTE DIRECTE</a></li>
-				<li><a href="contact.html">CONTACT</a></li>
+			<li><a href="quisommesnous.html">QUI SOMMES NOUS?</a></li>
+			<li><a href="vente directe.html">VENTE DIRECTE</a></li>
+			<li><a href="contact.html">CONTACT</a></li>
 			</ul>
 		</div>
 	</header>
-	<div class="photo">
-		<div id="slider">
-		<div class="images">
-			<img src="slider/pic1.jpg">
-			<img src="slider/pic2.jpg">
-			<img src="slider/pic3.jpg">
-			<img src="slider/pic4.jpg">
-		</div>
-		</div>				 
-		<p class="texte">Prochaines ventes :<br> 5 juillet, 11 aout, 13 septembre
-			<br>
-			<button class="btn"><a href="#VENTE" class="lien-button">Commandez votre colis</a></button>
-		</p>
+	<h1 class="h1" id="CONTACT">CONTACT</h1>
+	<p class="p">adresse mail<br>numéro de téléphones<br><br>Le Doiterneau<br>44210 PORNIC</p>
+	<div class="feuilles">
+		<img src="asset/VERT/asset-feuille-4.png" alt="feuille" class="logofeuilles">
+		<img src="asset/VERT/asset-feuille-4.png" alt="feuille"class="logofeuilles">
+		<img src="asset/VERT/asset-feuille-4.png" alt="feuille"class="logofeuilles">
 	</div>
 <footer class="footer">
 	<img src="asset/BLANC/asset-texte-3.png" alt="logo la ferme du doiterneau" class="logofooter">
@@ -65,3 +58,4 @@
 </script>
 </body>
 </html>
+
