--- a/quisommesnous.html
+++ b/quisommesnous.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="fr">
 <head>
-	<title>La Ferme du Doiterneau</title>
-	<meta charset="UTF-8">
+    <title>QUI SOMMES-NOUS ?</title>
+    <meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<link rel="stylesheet" href="styles.css">
@@ -32,19 +32,22 @@
 			</ul>
 		</div>
 	</header>
-	<div class="photo">
-		<div id="slider">
-		<div class="images">
-			<img src="slider/pic1.jpg">
-			<img src="slider/pic2.jpg">
-			<img src="slider/pic3.jpg">
-			<img src="slider/pic4.jpg">
-		</div>
-		</div>				 
-		<p class="texte">Prochaines ventes :<br> 5 juillet, 11 aout, 13 septembre
-			<br>
-			<button class="btn"><a href="#VENTE" class="lien-button">Commandez votre colis</a></button>
-		</p>
+	<h1 class="h1" id="QUI">QUI SOMMES-NOUS ?</h1>
+	<p class="p">La Ferme du Doiterneau est une ferme familiale située sur la commune de Pornic, dans le Pays de Retz, en Loire-Atlantique (44).
+		<br>Nous sommes père et fils, associés depuis 2018. 
+		<br>Pascal y était auparavant installé depuis 1993 avant d’être rejoint par Antoine.
+		<br>
+		Notre ferme est conduite en bio depuis 2008, nous cultivons prairies et céréales pour les parcours ainsi que pour nourrir nos animaux. 
+		<br>
+		Les porcelets naissent dans nos cabanes de plein air. Avec leur mère, ils y seront toute la phase d’allaitement puis seront élevés sur paille dans nos bâtiments avec un accès extérieur grâce à une courette. 
+		<br>
+		Nos vaches et leurs veaux de races limousine profitent une grande partie de l’année des pâtures et des foins pour une vie paisible. Ils fournissent une viande naturelle et savoureuse.
+		<br>
+		Nous travaillons en circuit court, AMAP, vente directe….. etc etc à mieux rédiger</p>
+	<div class="feuilles">
+		<img src="asset/VERT/asset-feuille-4.png" alt="feuille" class="logofeuilles">
+		<img src="asset/VERT/asset-feuille-4.png" alt="feuille"class="logofeuilles">
+		<img src="asset/VERT/asset-feuille-4.png" alt="feuille"class="logofeuilles">
 	</div>
 <footer class="footer">
 	<img src="asset/BLANC/asset-texte-3.png" alt="logo la ferme du doiterneau" class="logofooter">
@@ -65,3 +68,4 @@
 </script>
 </body>
 </html>
+
