--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 		</div>				 
 		<p class="texte">Prochaines ventes :<br> 5 juillet, 11 aout, 13 septembre
 			<br>
-			<button class="btn"><a href="#VENTE" class="lien-button">Commandez votre colis</a></button>
+			<button class="btn"><a href="vente directe.html" class="lien-button">Commandez votre colis</a></button>
 		</p>
 	</div>
 <footer class="footer">
