--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
 	<div class="photo">
 		<div id="slider">
 		<div class="images">
-			<img src="slider/pic1.jpg">
-			<img src="slider/pic2.jpg">
-			<img src="slider/pic3.jpg">
-			<img src="slider/pic4.jpg">
+			<img src="slider/pic1.png">
+			<img src="slider/pic2.png">
+			<img src="slider/pic3.png">
+			<img src="slider/pic4.png">
 		</div>
 		</div>				 
 		<p class="texte">Prochaines ventes :<br> 5 juillet, 11 aout, 13 septembre
