--- a/quisommesnous.html
+++ b/quisommesnous.html
@@ -32,6 +32,12 @@
 			</ul>
 		</div>
 	</header>
+	<div class="presentation">
+		<div>
+			<img src="vaches.jpg" width="400px";
+		</div>
+	</div>
+	<div>
 	<h1 class="h1" id="QUI">QUI SOMMES-NOUS ?</h1>
 	<p class="p">La Ferme du Doiterneau est une ferme familiale située sur la commune de Pornic, dans le Pays de Retz, en Loire-Atlantique (44).
 		<br>Nous sommes père et fils, associés depuis 2018. 
@@ -44,7 +50,9 @@
 		Nos vaches et leurs veaux de races limousine profitent une grande partie de l’année des pâtures et des foins pour une vie paisible. Ils fournissent une viande naturelle et savoureuse.
 		<br>
 		Nous travaillons en circuit court, AMAP, vente directe….. etc etc à mieux rédiger</p>
-	<div class="feuilles">
+		</div>
+	</div>
+		<div class="feuilles">
 		<img src="asset/VERT/asset-feuille-4.png" alt="feuille" class="logofeuilles">
 		<img src="asset/VERT/asset-feuille-4.png" alt="feuille"class="logofeuilles">
 		<img src="asset/VERT/asset-feuille-4.png" alt="feuille"class="logofeuilles">
