--- a/vente directe.html
+++ b/vente directe.html
@@ -34,12 +34,19 @@
 	</header>
 	<h1 class="h1" id="VENTE">VENTE DIRECTE</h1>
 	<p class="p">Nous proposons différents colis à la vente direct : .... </p>
-	<h2 class="h2">BOEUF</h2>
+	<div class="colis">
+	<div><h2 class="h2">BOEUF</h2>
 	<p class="p">détail</p>
+	</div>
+	<div>
 	<h2 class="h2">PORC</h2>
 	<p class="p">détail</p>
-	<h2 class="h2">MOUTON</h2>
+	</div>
+	<div>
+	<h2 class="h2">VEAU</h2>
 	<p class="p">détail</p>
+	</div>
+	</div>
 	<button class="btn2"><a href="index.html" class="lien-button">Commandez votre colis</a></button>
 	<div class="feuilles">
 		<img src="asset/VERT/asset-feuille-4.png" alt="feuille" class="logofeuilles">
